Post operation done for user and property